// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-action-blocks> Component Basic usage 1`] = `
<bolt-action-blocks>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: false 1`] = `
<bolt-action-blocks>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: true 1`] = `
<bolt-action-blocks borderless>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Deprecated props still render as expected 1`] = `
<bolt-action-blocks max-items-per-row="2"
                    valign="center"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-2 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Subcomponent renders as expected 1`] = `
<bolt-action-block>
  <a class="c-bolt-action-block c-bolt-action-block--link"
     href="#!"
  >
    <div class="c-bolt-action-block__item">
      <svg class="e-bolt-icon e-bolt-icon--large"
           aria-hidden="true"
           enable-background="new 0 0 32 32"
           viewbox="0 0 32 32"
           xmlns="http://www.w3.org/2000/svg"
      >
        <g clip-rule="evenodd"
           fill-rule="evenodd"
           transform="translate(4 3)"
        >
          <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
          </path>
          <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
          </path>
        </g>
      </svg>
    </div>
    <div class="c-bolt-action-block__item c-bolt-action-block__text">
      Item 1
    </div>
  </a>
</bolt-action-block>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: center 1`] = `
<bolt-action-blocks valign="center">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: end 1`] = `
<bolt-action-blocks valign="end">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-end c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: medium 1`] = `
<bolt-action-blocks spacing="medium">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: small 1`] = `
<bolt-action-blocks spacing="small">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-small c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: start 1`] = `
<bolt-action-blocks valign="start">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: xsmall 1`] = `
<bolt-action-blocks spacing="xsmall">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-xsmall c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(4 3)"
              >
                <path d="m24.1 25.6h-24.2c-.9 0-1.7.8-1.7 1.7s.8 1.7 1.7 1.7h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7">
                </path>
                <path d="m11 22.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4v-12.6h-9.1v12.7h-4.6c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
              >
                <path d="m26.2 27.6c0 .8-.7 1.5-1.5 1.5h-17.4c-.8 0-1.5-.7-1.5-1.5v-20.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zm-14.6-24.7h8.7v2.9h-8.7v-1.4-.1zm13.1 0h-1.5c.1-1.6-1.2-2.9-2.8-2.9h-8.7c-1.7 0-3 1.3-3 2.9h-1.4c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4v-20.4c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="m17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 aria-hidden="true"
                 enable-background="new 0 0 32 32"
                 viewbox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
            >
              <g clip-rule="evenodd"
                 fill-rule="evenodd"
                 transform="translate(2 1)"
              >
                <path d="m1.9 28h24.2v-16.7h-24.2zm24.2-26.5h-1.4v-2.5h-3v2.5h-15.4v-2.5h-3v2.5h-1.4c-1.7 0-3 1.4-3 3v23.5c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3v-23.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="m5.4 17.4h17.3v-3h-17.3z">
                </path>
                <path d="m5.4 23.9h13.6v-3h-13.6z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;
